2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* po/POTFILES.in: Add missing file
	libempathy-gtk/empathy-account-widget-msn.glade.

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-jabber.glade:
	* libempathy-gtk/empathy-account-widget-jabber.c: Hide
	"advanced options" for jabber in a GtkExpander. Fixes bug #459168
	(Guillaume Desmottes).

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-new-chatroom-dialog.c:
	* libempathy/empathy-tp-roomlist.c: Fix Room listing. Fixes bug #460416
	(Sjoerd Simons).

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/Makefile.am:
	* libempathy/Makefile.am:
	* configure.ac: Use libtool -version-info. Fixes bug #460579
	(Laurent Bigonville).

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* README:
	* autogen.sh: Remove the autogen.sh script and use gnome-autogen.sh
	instead. Fixes bug #460590.

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-chooser.c:
	* libempathy-gtk/empathy-new-chatroom-dialog.c:
	* libempathy-gtk/empathy-account-chooser.h:
	* libempathy-gtk/empathy-contact-dialogs.c:
	* libempathy-gtk/empathy-chatrooms-window.c:
	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/empathy-contact-widget.h:
	* libempathy-gtk/empathy-log-window.c:
	* doc/*: Do not show salut accounts in the add contact dialog. Rework
	a bit EmpathyContactWidget. Fixes bug #459100
	(Guillaume Desmottes, Xavier Claessens).

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-accounts-dialog.c: add contact frame is not
	hidden after cancelling. Fixes bug #458997 (Frederic Peters).

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-idle.c: Fix problems when NM is not running. Fixes
	bug #460419.

	* doc/*: Updated documentation.

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.10
