@@ -1,3 +1,12 @@
+2007-07-27 Xavier Claessens  <xclaesse@gmail.com>
+
+	* libempathy/empathy-message.c:
+	* libempathy/empathy-message.h:
+	* libempathy/empathy-log-manager.c: Add message type in log files.
+	Fixes bug #459579.
+
+	* doc/*: Updated.
+
 2007-07-26 Xavier Claessens  <xclaesse@gmail.com>
 
 	* po/POTFILES.in: Add missing file
